fix: extra margin and missed cleanup

--- a/src/sass/app/components/account_transfer.scss
+++ b/src/sass/app/components/account_transfer.scss
@@ -44,6 +44,7 @@
                     width: 46px;
                     align-items: center;
                     justify-content: center;
+                    margin-right: 5px;
                 }
                 input {
                     margin: 0;
